@@ -8,6 +8,7 @@ libcsp NEXT, DATE
 - New: MacOSX support
 - New: Interface register function
 - New: Interface search function
+- New: CMP service for remote route updating
 - Improvement: Better QoS support
 - Improvement: Send RDP control messages with high priority
 - Improvement: WAF distcheck now works
